--- a/Nature/css/style.css
+++ b/Nature/css/style.css
@@ -234,6 +234,7 @@ body {
   text-align: center;
   padding: 5rem 5rem;
   border-radius: 3px;
+  height: 35rem;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
   transition: transform .3s; }
   .features-icon {
