--- a/Nature/sass/components/_features.scss
+++ b/Nature/sass/components/_features.scss
@@ -4,6 +4,7 @@
     text-align: center;
     padding: 5rem 5rem;
     border-radius: 3px;
+    height: 35rem;
     box-shadow: 0 1.5rem 4rem rgba($color-black , .15) ;
     transition: transform .3s;
     &-icon{
